--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     5. You can share files with peers within the app privately
     6.You can preview files privately within the app
 
-    File Cloud saves your phone storage by helping you to upload and save any files privately for easy access without using storage or
+    File Cloud saves your phone storage by helping you to upload and save any files privately for
+    easy access without using storage or
     memory.
     1. In-Build AppLocker to secure and private your files.
     2.Upload any files for save storage on the app
